# FedPy

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COST.md  GAP-ANALYSIS.md  LICENSE  NOTICE  README.md  RUNBOOK.md
nonfed_pci_inventory_generator/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  seeds.example.yaml
nonfed_pci_inventory_generator/docs/: scope-seed-and-tagging-convention.md
nonfed_pci_inventory_generator/examples/: accounts.example.yaml
nonfed_pci_inventory_generator/iam/: assume-role-trust-policy.example.json  pci-inventory-readonly-policy.json
nonfed_pci_inventory_generator/research/: 01-pci-inventory-requirements.md  02-column-schema.md  03-service-coverage-matrix.md  04-pci-requirement-evidence-mapping.md  05-reaudit-gap-analysis.md  06-scope-and-segmentation.md  07-stage2-reaudit-gap-analysis.md  08-evidence-requirement-mapping.md
nonfed_pci_inventory_generator/src/pci_inventory/: __init__.py  auth.py  cli.py  concurrency.py  config.py  orchestrator.py  progress.py  regions.py  utils.py
nonfed_pci_inventory_generator/src/pci_inventory/collectors/: __init__.py  base.py  compute.py  database.py  edge.py  extra.py  iam.py  logging_mon.py  management.py  messaging.py  network.py  security.py  storage.py
nonfed_pci_inventory_generator/src/pci_inventory/evidence/: __init__.py  cli.py  csv_writer.py  findings.py  indicators.py  loader.py  mapping.py  (+3 more)
nonfed_pci_inventory_generator/tests/: test_concurrency.py  test_evidence_offline.py  test_pipeline_offline.py  test_progress.py  test_scope_offline.py  test_scope_reaudit.py
(+780 files in other folders)
